k8s/umami/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`umami.kevingomez.fr`)
      services:
        - kind: Service
          name: umami
          port: http
  tls:
    secretName: umami-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami-http
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`umami.kevingomez.fr`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - kind: Service
          name: umami
          port: http
